--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "frontend",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
+    "dev": "next dev",
+    "heroku-postbuild": "npm run build",
     "lint": "next lint"
   },
   "dependencies": {
